--- a/UniFiler10/Controlz/LolloTextBox.xaml
+++ b/UniFiler10/Controlz/LolloTextBox.xaml
@@ -17,6 +17,10 @@
 		<!--<Setter Property="BorderThickness" Value="{StaticResource EThickness}"/>-->
 		<Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}"/>
 		<Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}"/>
+		<Setter Property="HorizontalAlignment" Value="Stretch"/>
+		<Setter Property="VerticalAlignment" Value="Stretch"/>
+		<Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+		<Setter Property="VerticalContentAlignment" Value="Stretch"/>
 		<Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
 		<Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden"/>
 		<Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False"/>
@@ -264,5 +268,10 @@
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
+	</Style>
+
+	<Style x:Key="LolloTextBoxStyle" TargetType="ctl:LolloTextBox" BasedOn="{StaticResource LolloTextBoxFieldValueStyle}">
+		<Setter Property="HorizontalAlignment" Value="Left"/>
+		<Setter Property="VerticalAlignment" Value="Top"/>
 	</Style>
 </ResourceDictionary>
